apps/templates/oauth2-service-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-svc-bridge
  namespace: apps
spec:
  type: ExternalName
  externalName: oauth2-proxy.dex
