apps/templates/ingress-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "proxy-ingress-what"
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  namespace: dex
spec:
  ingressClassName: nginx
  rules:
    - host: speedtest.maibaloc.com
      http:
        paths:
          - backend:
              service:
                name: oauth2-proxy
                port:
                  name: http
            path: /oauth2
            pathType: Prefix
